<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".Register">

    <ImageView
        android:id="@+id/rimg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/rimg2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="100:40"
        android:src="@drawable/log"
        app:layout_constraintBottom_toTopOf="@id/rt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/rt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="Let’s help you meet up your test"
        android:textColor="#000000"
        android:textSize="20dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="20sp"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/flnme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rimg2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/flnme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/input"
        android:paddingHorizontal="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="40:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rti1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_full_name"
            android:inputType="text"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eml"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/input"
        android:paddingHorizontal="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/pass"
        app:layout_constraintDimensionRatio="40:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flnme"
        app:layout_constraintVertical_bias="0.55">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rti2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/input"
        android:paddingHorizontal="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/cnfpass"
        app:layout_constraintDimensionRatio="40:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eml"
        app:layout_constraintVertical_bias="0.65"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rti3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cnfpass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/input"
        android:paddingHorizontal="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="40:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cnfpass"
        app:layout_constraintVertical_bias="0.75"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rti4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:fontFamily="@font/poppins"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/rb1"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:background="@drawable/register_button"
        android:text="@string/register"
        android:textColor="#ffff"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/rt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="Already have an account ? "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F6F6F6"
        android:fontFamily="@font/poppins"
        android:gravity="left"
        android:text="sign in"
        android:textAllCaps="false"
        android:textColor="#E76F51"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rt2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>